--- a/html_CSS/index.html
+++ b/html_CSS/index.html
@@ -6,10 +6,11 @@
     </head>
     <article id="images">
        <h3>here are images of camping</h3>
-       <img src=" "/>
+       <img src="../DSCN0043.JPG"/>
        <img src" "/>
       
     </article>
 
     
   </html>
+
