--- a/html_CSS/index.html
+++ b/html_CSS/index.html
@@ -7,10 +7,11 @@
     <article id="images">
        <h3>here are images of camping</h3>
        <img src="../DSCN0043.JPG"/>
-       <img src" "/>
+       <img src="../DSCN0074.JPG"/>
       
     </article>
 
     
   </html>
+
 
