--- a/start.html
+++ b/start.html
@@ -2,14 +2,15 @@
   <html>
     <head>
       <title>camping</title>
-      <link rel="stylesheet" type="text/css" href="style.css">
+      <link rel="stylesheet" type="text/css" href="html_CSS/style.css">
     </head>
     <article id="images">
        <h3>here are images of camping</h3>
-       <img src="../DSCN0043.JPG"/>
-       <img src="../DSCN0074.JPG"/>
+       <img src="DSCN0043.JPG"/>
+       <img src="DSCN0074.JPG"/>
       
     </article>
 
     
   </html>
+
