--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-  <html>
+  <html lang="en">
     <head>
+      <meta charset="UTF-8">
       <title>camping</title>
       <link rel="stylesheet" type="text/css" href="html_CSS/style.css">
     </head>
@@ -13,5 +14,6 @@
 
     
   </html>
+
 
 
