Entered more images

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
        <h1>here are images of camping</h1>
        <img src="DSCN0043.JPG"/>
        <img src="DSCN0074.JPG"/>
+       <img src="DSCN0099.JPG"/>
+       <img src="DSCN0141.JPG"/>
+       <img src="DSCN0050.JPG"/>
       
     </article>
-
+    <footer>
+    <a href="https://www.google.com/search?client=firefox-b-1-d&sca_esv=bb558130a597fb8c&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIehZSPZtq-ywdxHK81a_1UWm-hTEDwowP4WTUORcrjV2i6YZOgbGIbSKvaPDZmQkPaEXTq_H5qWZVIeoy5b2ml4GiOLNbZ6r-qHu_GQqiXQ8ZJsAIVqYH3PebytroXn9DRTcXGuSHjq6LCz-hR5d8gvlq07uZzZ990HLqf_1NERCNIBK6PQ&q=camping&sa=X&ved=2ahUKEwjn3KqHg6CQAxWdFVkFHe2rFrQQtKgLegQIFBAB&biw=1280&bih=587&dpr=1.5"> More pictures here of camping </a>
+    </footer>
     
   </html>
 
