--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <divA id="text">
        <h1>here are images of camping</h1>
       </divA>
-      <divB id=""images>
+      <divB id="images">
        <img src="DSCN0043.JPG"/>
        <img src="DSCN0074.JPG"/>
        <img src="DSCN0099.JPG"/>
