Added dimensions for images

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
        <h1>here are images of camping</h1>
       </divA>
       <divB id="images">
-       <img src="DSCN0043.JPG"/>
-       <img src="DSCN0074.JPG"/>
-       <img src="DSCN0099.JPG"/>
-       <img src="DSCN0141.JPG"/>
-       <img src="DSCN0050.JPG"/>
+       <img src="DSCN0043.JPG" style="height:80%; max-width: 100%;"/>
+       <img src="DSCN0074.JPG" style="height:80%; max-width: 100%;"/>
+       <img src="DSCN0099.JPG" style="height:80%; max-width: 100%;"/>
+       <img src="DSCN0141.JPG" style="height:80%; max-width: 100%;"/>
+       <img src="DSCN0050.JPG" style="height:80%; max-width: 100%;"/>
        <br>
       </divB>
     </article>
