--- a/index.html
+++ b/index.html
@@ -5,18 +5,24 @@
       <title>camping</title>
       <link rel="stylesheet" type="text/css" href="html_CSS/style.css">
     </head>
-    <article id="border">
-      <divA id="text">
+    <header>
        <h1>here are images of camping</h1>
-      </divA>
-      <divB id="images">
+    </header>
+    <article>
        <img src="DSCN0043.JPG" style="height:80%; max-width: 100%;"/>
        <img src="DSCN0074.JPG" style="height:80%; max-width: 100%;"/>
        <img src="DSCN0099.JPG" style="height:80%; max-width: 100%;"/>
        <img src="DSCN0141.JPG" style="height:80%; max-width: 100%;"/>
        <img src="DSCN0050.JPG" style="height:80%; max-width: 100%;"/>
+       <img src="DSCN0086.JPG" style="height:80%; max-width: 100%;"/>
+       <img src="DSCN0087.JPG" style="height:80%; max-width: 100%;"/>
+       <img src="DSCN0110.JPG" style="height:80%; max-width: 100%;"/>
+       <img src="DSCN0114.JPG" style="height:80%; max-width: 100%;"/>
+       <img src="DSCN0217.JPG" style="height:80%; max-width: 100%;"/>
+       <img src="DSCN0221.JPG" style="height:80%; max-width: 100%;"/>
+       <img src="DSCN1035.JPG" style="height:80%; max-width: 100%;"/>
+       <img src="DSCN1040.JPG" style="height:80%; max-width: 100%;"/>
        <br>
-      </divB>
     </article>
     <footer>
     <a href="https://www.google.com/search?client=firefox-b-1-d&sca_esv=bb558130a597fb8c&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIehZSPZtq-ywdxHK81a_1UWm-hTEDwowP4WTUORcrjV2i6YZOgbGIbSKvaPDZmQkPaEXTq_H5qWZVIeoy5b2ml4GiOLNbZ6r-qHu_GQqiXQ8ZJsAIVqYH3PebytroXn9DRTcXGuSHjq6LCz-hR5d8gvlq07uZzZ990HLqf_1NERCNIBK6PQ&q=camping&sa=X&ved=2ahUKEwjn3KqHg6CQAxWdFVkFHe2rFrQQtKgLegQIFBAB&biw=1280&bih=587&dpr=1.5" target="_blank"> More pictures here of camping </a>
