--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" type="text/css" href="html_CSS/style.css">
     </head>
     <header>
-       <h1>here are images of camping</h1>
+       <h1>Here are images of camping</h1>
     </header>
     <article>
        <img src="DSCN0043.JPG" style="height:80%; max-width: 100%;"/>
