--- a/html_CSS/index.html
+++ b/html_CSS/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
   <html>
- 
+    <head>
+      <meta charset="UTF-8">
+      <title>Other Images</title>
+      <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <article>
+      <img src="https://www.facebook.com/photo/?fbid=1336502305144301&set=pcb.1336502518477613" style="height:80%; max-width: 100%;"/>
+      <img src="https://www.facebook.com/photo/?fbid=1299429672224658&set=a.611090204391945" style="height:80%; max-width: 100%;"/>
+    </article>
+
+   <header>
+    <h1>Other Images</h1>
+   </header>
     
       
 
