--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <header>
        <h1>Here are images of camping</h1>
     </header>
+    <nav>
+      <a href="html_CSS/index.html"> Other Images </a>
+    </nav>
     <article>
        <img src="DSCN0043.JPG" style="height:80%; max-width: 100%;"/>
        <img src="DSCN0074.JPG" style="height:80%; max-width: 100%;"/>
