--- a/html_CSS/index.html
+++ b/html_CSS/index.html
@@ -10,12 +10,13 @@
    </header>
 
     <article>
-      <img src="Person_1.jpg" style="height:80%; max-width: 100%;"/>
-      <img src="person_2.jpg" style="height:80%; max-width: 100%;"/>
-      <img src="https://people.com/thmb/8eFI5gvLxYRmRKcrgqdd31LJu44=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():focal(686x292:688x294)/Hayley-Williams-Talks-Paramore-Breakup-100923-04-d9a18e2bd022450e9c6e98bd12a11c3c.jpg" style="height:80%; max-width: 100%;"/>
+  
+
     </article>
 
-   
+    <footer>
+      <a href="index.html">Back to Home</a>
+    </footer>
        
   </html>
 
