--- a/html_CSS/index.html
+++ b/html_CSS/index.html
@@ -15,7 +15,7 @@
     </article>
 
     <footer>
-      <a href="index.html">Back to Home</a>
+      <a href="../index.html">Back to Home</a>
     </footer>
        
   </html>
